AnaliseSintatica/miniCParser.py
# Generated from miniC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class miniCParser ( Parser ):

    grammarFileName = "miniC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "';'", "'('", "')'", "'{'", "'}'", 
                     "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'=='", 
                     "'!='", "'<'", "'<='", "'>='", "'>'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'++'", "'--'", "'if'", "'else'", 
                     "'while'", "'break'", "'continue'", "'return'", "'int'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "IF", "ELSE", "WHILE", "BREAK", 
                      "CONTINUE", "RETURN", "INT", "IDENTIFIER", "CONSTANT_INT", 
                      "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_definition = 1
    RULE_data_definition = 2
    RULE_declarator = 3
    RULE_function_definition = 4
    RULE_function_header = 5
    RULE_parameter_list = 6
    RULE_parameter_declaration = 7
    RULE_function_body = 8
    RULE_block = 9
    RULE_statement = 10
    RULE_expression = 11
    RULE_binary = 12
    RULE_unary = 13
    RULE_primary = 14
    RULE_argument_list = 15

    ruleNames =  [ "program", "definition", "data_definition", "declarator", 
                   "function_definition", "function_header", "parameter_list", 
                   "parameter_declaration", "function_body", "block", "statement", 
                   "expression", "binary", "unary", "primary", "argument_list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    IF=26
    ELSE=27
    WHILE=28
    BREAK=29
    CONTINUE=30
    RETURN=31
    INT=32
    IDENTIFIER=33
    CONSTANT_INT=34
    WS=35
    COMMENT=36
    LINE_COMMENT=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(miniCParser.DefinitionContext,i)


        def getRuleIndex(self):
            return miniCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = miniCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.definition()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==32 or _la==33):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_definition(self):
            return self.getTypedRuleContext(miniCParser.Data_definitionContext,0)


        def function_definition(self):
            return self.getTypedRuleContext(miniCParser.Function_definitionContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)




    def definition(self):

        localctx = miniCParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition)
        try:
            self.state = 39
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.data_definition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 38
                self.function_definition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(miniCParser.INT, 0)

        def declarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.DeclaratorContext)
            else:
                return self.getTypedRuleContext(miniCParser.DeclaratorContext,i)


        def getRuleIndex(self):
            return miniCParser.RULE_data_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_definition" ):
                listener.enterData_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_definition" ):
                listener.exitData_definition(self)




    def data_definition(self):

        localctx = miniCParser.Data_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_data_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self.match(miniCParser.INT)
            self.state = 42
            self.declarator()
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 43
                self.match(miniCParser.T__0)
                self.state = 44
                self.declarator()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.match(miniCParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(miniCParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return miniCParser.RULE_declarator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarator" ):
                listener.enterDeclarator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarator" ):
                listener.exitDeclarator(self)




    def declarator(self):

        localctx = miniCParser.DeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declarator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(miniCParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_header(self):
            return self.getTypedRuleContext(miniCParser.Function_headerContext,0)


        def function_body(self):
            return self.getTypedRuleContext(miniCParser.Function_bodyContext,0)


        def INT(self):
            return self.getToken(miniCParser.INT, 0)

        def getRuleIndex(self):
            return miniCParser.RULE_function_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_definition" ):
                listener.enterFunction_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_definition" ):
                listener.exitFunction_definition(self)




    def function_definition(self):

        localctx = miniCParser.Function_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 54
                self.match(miniCParser.INT)


            self.state = 57
            self.function_header()
            self.state = 58
            self.function_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_headerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarator(self):
            return self.getTypedRuleContext(miniCParser.DeclaratorContext,0)


        def parameter_list(self):
            return self.getTypedRuleContext(miniCParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_function_header

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_header" ):
                listener.enterFunction_header(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_header" ):
                listener.exitFunction_header(self)




    def function_header(self):

        localctx = miniCParser.Function_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.declarator()
            self.state = 61
            self.parameter_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_declaration(self):
            return self.getTypedRuleContext(miniCParser.Parameter_declarationContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_parameter_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_list" ):
                listener.enterParameter_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_list" ):
                listener.exitParameter_list(self)




    def parameter_list(self):

        localctx = miniCParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(miniCParser.T__2)
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32:
                self.state = 64
                self.parameter_declaration()


            self.state = 67
            self.match(miniCParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(miniCParser.INT)
            else:
                return self.getToken(miniCParser.INT, i)

        def declarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.DeclaratorContext)
            else:
                return self.getTypedRuleContext(miniCParser.DeclaratorContext,i)


        def getRuleIndex(self):
            return miniCParser.RULE_parameter_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_declaration" ):
                listener.enterParameter_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_declaration" ):
                listener.exitParameter_declaration(self)




    def parameter_declaration(self):

        localctx = miniCParser.Parameter_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(miniCParser.INT)
            self.state = 70
            self.declarator()
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 71
                self.match(miniCParser.T__0)
                self.state = 72
                self.match(miniCParser.INT)
                self.state = 73
                self.declarator()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.Data_definitionContext)
            else:
                return self.getTypedRuleContext(miniCParser.Data_definitionContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniCParser.StatementContext,i)


        def getRuleIndex(self):
            return miniCParser.RULE_function_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_body" ):
                listener.enterFunction_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_body" ):
                listener.exitFunction_body(self)




    def function_body(self):

        localctx = miniCParser.Function_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_function_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(miniCParser.T__4)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32:
                self.state = 80
                self.data_definition()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 29913776172) != 0):
                self.state = 86
                self.statement()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(miniCParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniCParser.StatementContext,i)


        def getRuleIndex(self):
            return miniCParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = miniCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(miniCParser.T__4)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 29913776172) != 0):
                self.state = 95
                self.statement()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(miniCParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(miniCParser.ExpressionContext,0)


        def IF(self):
            return self.getToken(miniCParser.IF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniCParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(miniCParser.ELSE, 0)

        def WHILE(self):
            return self.getToken(miniCParser.WHILE, 0)

        def BREAK(self):
            return self.getToken(miniCParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(miniCParser.CONTINUE, 0)

        def RETURN(self):
            return self.getToken(miniCParser.RETURN, 0)

        def block(self):
            return self.getTypedRuleContext(miniCParser.BlockContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = miniCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 24, 25, 33, 34]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.expression()
                self.state = 104
                self.match(miniCParser.T__1)
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(miniCParser.IF)
                self.state = 107
                self.match(miniCParser.T__2)
                self.state = 108
                self.expression()
                self.state = 109
                self.match(miniCParser.T__3)
                self.state = 110
                self.statement()
                self.state = 113
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 111
                    self.match(miniCParser.ELSE)
                    self.state = 112
                    self.statement()


                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 3)
                self.state = 115
                self.match(miniCParser.WHILE)
                self.state = 116
                self.match(miniCParser.T__2)
                self.state = 117
                self.expression()
                self.state = 118
                self.match(miniCParser.T__3)
                self.state = 119
                self.statement()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 4)
                self.state = 121
                self.match(miniCParser.BREAK)
                self.state = 122
                self.match(miniCParser.T__1)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 5)
                self.state = 123
                self.match(miniCParser.CONTINUE)
                self.state = 124
                self.match(miniCParser.T__1)
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 6)
                self.state = 125
                self.match(miniCParser.RETURN)
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 25820135432) != 0):
                    self.state = 126
                    self.expression()


                self.state = 129
                self.match(miniCParser.T__1)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 7)
                self.state = 130
                self.block()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 8)
                self.state = 131
                self.match(miniCParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def binary(self):
            return self.getTypedRuleContext(miniCParser.BinaryContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = miniCParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.binary(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BinaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(miniCParser.IDENTIFIER, 0)

        def binary(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.BinaryContext)
            else:
                return self.getTypedRuleContext(miniCParser.BinaryContext,i)


        def unary(self):
            return self.getTypedRuleContext(miniCParser.UnaryContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_binary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinary" ):
                listener.enterBinary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinary" ):
                listener.exitBinary(self)



    def binary(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = miniCParser.BinaryContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 24
        self.enterRecursionRule(localctx, 24, self.RULE_binary, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 137
                self.match(miniCParser.IDENTIFIER)
                self.state = 138
                self.match(miniCParser.T__6)
                self.state = 139
                self.binary(18)
                pass

            elif la_ == 2:
                self.state = 140
                self.match(miniCParser.IDENTIFIER)
                self.state = 141
                self.match(miniCParser.T__7)
                self.state = 142
                self.binary(17)
                pass

            elif la_ == 3:
                self.state = 143
                self.match(miniCParser.IDENTIFIER)
                self.state = 144
                self.match(miniCParser.T__8)
                self.state = 145
                self.binary(16)
                pass

            elif la_ == 4:
                self.state = 146
                self.match(miniCParser.IDENTIFIER)
                self.state = 147
                self.match(miniCParser.T__9)
                self.state = 148
                self.binary(15)
                pass

            elif la_ == 5:
                self.state = 149
                self.match(miniCParser.IDENTIFIER)
                self.state = 150
                self.match(miniCParser.T__10)
                self.state = 151
                self.binary(14)
                pass

            elif la_ == 6:
                self.state = 152
                self.match(miniCParser.IDENTIFIER)
                self.state = 153
                self.match(miniCParser.T__11)
                self.state = 154
                self.binary(13)
                pass

            elif la_ == 7:
                self.state = 155
                self.unary()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 193
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 191
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                    if la_ == 1:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 158
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 159
                        self.match(miniCParser.T__12)
                        self.state = 160
                        self.binary(13)
                        pass

                    elif la_ == 2:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 161
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 162
                        self.match(miniCParser.T__13)
                        self.state = 163
                        self.binary(12)
                        pass

                    elif la_ == 3:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 164
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 165
                        self.match(miniCParser.T__14)
                        self.state = 166
                        self.binary(11)
                        pass

                    elif la_ == 4:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 167
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 168
                        self.match(miniCParser.T__15)
                        self.state = 169
                        self.binary(10)
                        pass

                    elif la_ == 5:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 170
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 171
                        self.match(miniCParser.T__16)
                        self.state = 172
                        self.binary(9)
                        pass

                    elif la_ == 6:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 173
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 174
                        self.match(miniCParser.T__17)
                        self.state = 175
                        self.binary(8)
                        pass

                    elif la_ == 7:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 176
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 177
                        self.match(miniCParser.T__18)
                        self.state = 178
                        self.binary(7)
                        pass

                    elif la_ == 8:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 179
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 180
                        self.match(miniCParser.T__19)
                        self.state = 181
                        self.binary(6)
                        pass

                    elif la_ == 9:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 182
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 183
                        self.match(miniCParser.T__20)
                        self.state = 184
                        self.binary(5)
                        pass

                    elif la_ == 10:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 185
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 186
                        self.match(miniCParser.T__21)
                        self.state = 187
                        self.binary(4)
                        pass
